2007-02-23  Andrew Cagney  <cagney@redhat.com>

	* FrameCursor.java (procName, procOffset): Add.
	(getProcName, getProcOffset): Add.
	(demangledMethodName): Rename methodName.
	* cni/FrameCursor.cxx (create_frame_cursor): Update.

2007-02-23  Nurdin Premji  <npremji@redhat.com>

	* Accessors.java: Changed getProcName to take in maxNameSize parameter.
	* AddressSpace.java: Changed addressSpace to RawData.
	(finalize): Added.
	* Cursor.java: Reflect change in initRemote binding (returns cursor rather than
	setting cursor). Added logger. 
	(getProcName): Added.
	* PtraceAccessors.java: Reflect Accessor changes. Added logger. 
	(detachXXX): Added 
	* TestUnwind: Reflect changes in Accessor. 
	(testPtraceAccessors): Renamed, was testMyProcess.
	* Unwind.java: Changed bindings to reflect addressSpace is now RawData.
	(getProcName): Added.
	* UnwindNative.java: Ditto.
	* cni/PtraceAccessors.cxx: Added include statement for Accessors.h.
	(detachXXX): Added.
	(getProcName): Changed to use char[] rather than char pointer to store procName.
	* cni/UnwindNative.cxx: Reflect changes to AddressSpace.
	 (getProcName): Added.	

2007-02-21  Nurdin Premji  <npremji@redhat.com>

	* Cursor.java (Cursor): Throw Exception if initRemote fails.	
	* Unwind.java: Fix copyright year.
	* UnwindNative.java: Ditto.
	* AddressSpace.java: Ditto.	
	* ProcInfo.java: New.
	* ProcName.java: New.
	* PtraceAccessors: New.	
	* cni/PtraceAccessors.cxx: New.
	* Accessors.java: Use byte arrays instead of ByteBuffers.
	Use longs for address references.
	Use ProcInfo and ProcName classes
	* TestUnwind.java: Reflect Accessors changes. Added test case that uses
	PtraceAccessors.
	* cni/UnwindNative.cxx: Use ProcInfo and ProcName classes. 
	Reflect Accessor changes.

2007-02-16  Nurdin Premji  <npremji@redhat.com>

	* Unwind.java (getRegister): Changed to pass regNum as int rather than
	RawDataManaged.
	* UnwindNative.java: Ditto.
	* cni/UnwindNative.cxx: Ditto.

	* Cursor.java: Added.