@@ -1,3 +1,8 @@
+2007-02-23  Nurdin Premji  <npremji@redhat.com>
+
+	* cni/PtraceAccessors.cxx: Added entry logging messages.
+	* cni/UnwindNative.cxx: Ditto.
+
 2007-02-23  Andrew Cagney  <cagney@redhat.com>
 
 	* FrameCursor.java (procName, procOffset): Add.
